Funzione stampa nella classe eroe